button text changed

--- a/index.html
+++ b/index.html
@@ -333,9 +333,12 @@
                   Logistics Scheduling
                 </h2>
                 <div class="main-slider__btn-box">
-                  <a href="about.html" class="main-slider__btn thm-btn">
+                  <a
+                    href="services.html#line-production"
+                    class="main-slider__btn thm-btn"
+                  >
                     <span class="fas fa-long-arrow-alt-right"></span>
-                    get started now</a
+                    Start a Project</a
                   >
                 </div>
               </div>
@@ -377,9 +380,12 @@
                   Distribution Branding
                 </h2>
                 <div class="main-slider__btn-box">
-                  <a href="about.html" class="main-slider__btn thm-btn">
+                  <a
+                    href="services.html#film-promotion"
+                    class="main-slider__btn thm-btn"
+                  >
                     <span class="fas fa-long-arrow-alt-right"></span>
-                    get started now</a
+                    Start a Project</a
                   >
                 </div>
               </div>
