backoffice service added

--- a/about.html
+++ b/about.html
@@ -245,6 +245,11 @@
                           >Compliance and Regulation</a
                         >
                       </li>
+                      <li>
+                        <a href="other-services.html#backoffice-support"
+                          >Backoffice Support</a
+                        >
+                      </li>
                     </ul>
                   </li>
                   <li>
@@ -348,13 +353,17 @@
                         <div class="tabs-one__tab-content-inner">
                           <p class="tabs-one__text">
                             Bringing your film project to life in the United
-                            States is an exciting opportunity to explore diverse
+                            States and across the Globe is an exciting
+                            opportunity to explore and experience diverse
                             locations, world-class infrastructure, and vibrant
                             cinematic culture. Our open line production services
                             are designed to simplify the process for filmmakers
                             and production houses from overseas, ensuring a
                             seamless experience throughout the filmmaking
-                            journey.
+                            journey. Our skills supports International
+                            Productions including Indian Fim Industry as
+                            Bollywood(Hindi) , Telugu, Tamil Malayalam, Bengali
+                            etc
                           </p>
                         </div>
                       </div>
