--- a/contact.html
+++ b/contact.html
@@ -245,6 +245,11 @@
                           >Compliance and Regulation</a
                         >
                       </li>
+                      <li>
+                        <a href="other-services.html#backoffice-support"
+                          >Backoffice Support</a
+                        >
+                      </li>
                     </ul>
                   </li>
                   <li>
