--- a/other-services.html
+++ b/other-services.html
@@ -175,6 +175,11 @@
                           >Compliance and Regulation</a
                         >
                       </li>
+                      <li>
+                        <a href="other-services.html#backoffice-support"
+                          >Backoffice Support</a
+                        >
+                      </li>
                     </ul>
                   </li>
                   <li>
@@ -513,7 +518,7 @@
                   </li>
                   <li class="list-group-item">
                     <i class="fas fa-check text-success"></i>
-                    <b>Location-Specific Approvals :</b> SObtain clearances for
+                    <b>Location-Specific Approvals :</b> Obtain clearances for
                     public spaces, private properties, and restricted areas.
                   </li>
                   <li class="list-group-item">
@@ -594,6 +599,68 @@
         </div>
       </section>
       <!--Compliance and Regulation ends  -->
+
+      <!-- Backoffice Support start  -->
+      <section id="backoffice-support" class="pt-5">
+        <div class="row mx-2" style="margin-top: 100px">
+          <div class="col-xl-7 col-lg-7 order-lg-2">
+            <div class="history-one__main-content-right">
+              <div class="history-one__main-content-img text-end">
+                <img src="assets/img/o-7.webp" alt="" class="img-fluid" />
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-5 col-lg-5 order-lg-1">
+            <div class="history-one__main-content-left">
+              <h3 class="history-one__main-content-title">
+                Backoffice Support
+              </h3>
+              <p class="history-one__main-content-text">
+                We provide a full backoffice support including Tax filing,
+                Accounting, Budgeting and all documentation related to
+                production internationally.
+              </p>
+              <div class="history-one__btn-box">
+                <a
+                  href="#"
+                  class="history-one__btn thm-btn"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#backoffice-details"
+                >
+                  <span class="fas fa-long-arrow-alt-right"></span> See Details
+                </a>
+              </div>
+
+              <!-- Collapsible Section -->
+              <div class="collapse mt-3" id="backoffice-details">
+                <ul class="list-group no-border-list">
+                  <li class="list-group-item">
+                    <i class="fas fa-check text-success"></i>
+                    <b>Administrative Assistance :</b> Handle paperwork,
+                    contracts, and legal documentation efficiently.
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fas fa-check text-success"></i>
+                    <b>Budget & Finance Management :</b> Track expenses, process
+                    payments, and ensure cost control.
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fas fa-check text-success"></i>
+                    <b>Crew & Vendor Coordination :</b> Manage hiring,
+                    scheduling, and communications with vendors.
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fas fa-check text-success"></i>
+                    <b>Data & Record Management :</b> Maintain production
+                    reports, legal files, and compliance records.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Backoffice support ends  -->
 
       <!--Testimonial Two Start-->
       <section class="testimonial-two">
