--- a/services.html
+++ b/services.html
@@ -241,7 +241,8 @@
                 to ensure seamless project execution. It streamlines workflows,
                 optimizes resources, and keeps everything on schedule. With
                 precise planning, it ensures cost efficiency and timely
-                completion.
+                completion. We are a one stop hub for your International
+                filming.
               </p>
               <div class="history-one__btn-box">
                 <a
@@ -270,16 +271,16 @@
                   <li class="list-group-item">
                     <i class="fas fa-check text-success"></i>
                     <b>Locations :</b> Secure locations and studios, and
-                    coordinate transportation and accommodations.We assist you
-                    in finding the perfect shooting locations across the USA,
-                    from iconic landmarks to hidden gems. Our team takes care of
-                    all necessary permissions and licensing, ensuring compliance
-                    with local and state regulations
+                    coordinate transportation and accommodations. We assist you
+                    in finding the perfect shooting locations across the USA and
+                    Europe, from iconic landmarks to hidden gems. Our team takes
+                    care of all necessary permissions and licensing, ensuring
+                    compliance with local and state regulations
                   </li>
                   <li class="list-group-item">
                     <i class="fas fa-check text-success"></i>
-                    <b>Permit for Filming :</b> We would obtain the permit for
-                    filming from the city
+                    <b>Permit for Filming :</b> Secure permit for filming from
+                    the Local Authority
                   </li>
                   <li class="list-group-item">
                     <i class="fas fa-check text-success"></i>
@@ -532,6 +533,28 @@
                 </p>
                 <a
                   href="other-services.html#filming-permit"
+                  class="services-one__read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <div
+              class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp"
+              data-wow-delay="600ms"
+            >
+              <div class="services-one__single">
+                <h3 class="services-one__title">
+                  <a href="other-services.html#backoffice-support"
+                    >Backoffice Support</a
+                  >
+                </h3>
+                <p class="services-one__text">
+                  We provide a full backoffice support including Tax filing,
+                  Accounting, Budgeting and all documentation related to
+                  production internationally.
+                </p>
+                <a
+                  href="other-services.html#backoffice-support"
                   class="services-one__read-more"
                   >Read More</a
                 >
