--- a/thankyou.html
+++ b/thankyou.html
@@ -124,17 +124,21 @@
                     <a href="index.html">Home </a>
                   </li>
                   <li class="">
-                    <a href="about.html">About</a>
+                    <a href="about.html">About Us</a>
                   </li>
 
                   <li class="dropdown">
                     <a href="services.html">Services</a>
                     <ul>
                       <li>
-                        <a href="#">Line Production</a>
+                        <a href="services.html#line-production"
+                          >Line Production</a
+                        >
                       </li>
                       <li>
-                        <a href="#">Film Promotion</a>
+                        <a href="services.html#film-promotion"
+                          >Film Promotion</a
+                        >
                       </li>
                     </ul>
                   </li>
@@ -142,23 +146,40 @@
                     <a href="other-services.html">Other Services</a>
                     <ul>
                       <li>
-                        <a href="#">VISA Applications for Foreign crew</a>
+                        <a href="other-services.html#visa"
+                          >VISA Applications for Foreign crew</a
+                        >
                       </li>
                       <li>
-                        <a href="#">Hotel Bookings & Catering</a>
+                        <a href="other-services.html#hotel"
+                          >Hotel Bookings & Catering</a
+                        >
                       </li>
                       <li>
-                        <a href="#">Local Tourism during break</a>
+                        <a href="other-services.html#local-tourism"
+                          >Local Tourism during break</a
+                        >
                       </li>
-                      <li><a href="#">Vehicle renting</a></li>
                       <li>
-                        <a href="#"
+                        <a href="other-services.html#vehicle-renting"
+                          >Vehicle renting</a
+                        >
+                      </li>
+                      <li>
+                        <a href="other-services.html#filming-permit"
                           >Filming permit all across USA and Other European
                           countries</a
                         >
                       </li>
                       <li>
-                        <a href="#">Compliance and Regulation</a>
+                        <a href="other-services.html#compliance"
+                          >Compliance and Regulation</a
+                        >
+                      </li>
+                      <li>
+                        <a href="other-services.html#backoffice-support"
+                          >Backoffice Support</a
+                        >
                       </li>
                     </ul>
                   </li>
@@ -169,7 +190,7 @@
               </div>
               <div class="main-menu-three__right">
                 <div class="main-menu-three__btn-box">
-                  <a href="about.html" class="main-menu-three__btn thm-btn">
+                  <a href="contact.html" class="main-menu-three__btn thm-btn">
                     <span class="fas fa-long-arrow-alt-right"></span>
                     let’s Talk</a
                   >
