--- a/index.html
+++ b/index.html
@@ -332,10 +332,12 @@
             </div>
             <div class="container">
               <div class="main-slider__content">
-                <!-- <p class="main-slider__sub-title">Eston Video Production</p> -->
+                <p class="main-slider__sub-title">
+                  Your partner for Film Production across the Globe
+                </p>
                 <h2 class="main-slider__title">
-                  Coordination Budgeting <br />
-                  Logistics Scheduling
+                  Optimize your budget <br />
+                  and schedule
                 </h2>
                 <div class="main-slider__btn-box">
                   <a
@@ -379,10 +381,12 @@
             </div>
             <div class="container">
               <div class="main-slider__content">
-                <!-- <p class="main-slider__sub-title">Eston Video Production</p> -->
+                <p class="main-slider__sub-title">
+                  Your partner for Film Production across the Globe
+                </p>
                 <h2 class="main-slider__title">
-                  Marketing Publicity <br />
-                  Distribution Branding
+                  Promotion of your <br />
+                  Creation
                 </h2>
                 <div class="main-slider__btn-box">
                   <a
