--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
                         >info@filmstudio25.com</a
                       >
                     </p>
-                    <p><a href="tel:+1516451492">+1-516-451-492</a></p>
+                    <p><a href="tel:+15164514923">+1-516-451-4923</a></p>
                   </div>
                   <div class="site-footer__social">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -1425,13 +1425,11 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@packageName__.com"
-              >info@filmstudio25.com</a
-            >
+            <a href="mailto:info@filmstudio25.com">info@filmstudio25.com</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
-            <a href="tel:+1516451492">+1-516-451-492</a>
+            <a href="tel:+15164514923">+1-516-451-4923</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
