--- a/about.html
+++ b/about.html
@@ -1131,9 +1131,7 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@packageName__.com"
-              >info@filmstudio25.com</a
-            >
+            <a href="mailto:info@filmstudio25.com">info@filmstudio25.com</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
