--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       href="assets/images/favicons/favicon-16x16.png"
     />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Eston HTML 5 Template " />
+    <meta name="description" content="FilmStudio25" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -636,9 +636,7 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@packageName__.com"
-              >info@filmstudio25.com</a
-            >
+            <a href="mailto:info@filmstudio25.com">info@filmstudio25.com</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
