--- a/thankyou.html
+++ b/thankyou.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Content Production || Eston || Eston HTML 5 Template</title>
+    <title>Thank You | FilmStudio25</title>
     <!-- favicons Icons -->
     <link
       rel="apple-touch-icon"
@@ -23,7 +23,7 @@
       href="assets/images/favicons/favicon-16x16.png"
     />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Eston HTML 5 Template " />
+    <meta name="description" content="FilmStudio25" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -391,9 +391,7 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@packageName__.com"
-              >info@filmstudio25.com</a
-            >
+            <a href="mailto:info@filmstudio25.com">info@filmstudio25.com</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
