--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
           <div class="main-header-three__top-inner">
             <ul class="list-unstyled main-header-three__contact-info">
               <li>
-                <a href="mailto:info@webmail.com">info@filmstudio25.com</a>
+                <a href="mailto:info@filmstudio25.com">info@filmstudio25.com</a>
               </li>
               <li><a href="tel:+15164514923">+1-516-451-4923</a></li>
             </ul>
