--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
                   <li>
                     <a href="index.html">Home </a>
                   </li>
-                  <li class="current">
+                  <li class="">
                     <a href="about.html">About Us</a>
                   </li>
 
@@ -252,7 +252,7 @@
                       </li>
                     </ul>
                   </li>
-                  <li>
+                  <li class="current">
                     <a href="contact.html">Contact</a>
                   </li>
                 </ul>
@@ -339,7 +339,7 @@
             <div class="col-xl-4 col-lg-4">
               <div class="contact-page__single contact-page__single-3">
                 <h4 class="contact-page__title">
-                  <a href="mailto:urajit@filmstudio25.com"
+                  <a href="mailto:surajit@filmstudio25.com"
                     >surajit@filmstudio25.com</a
                   >
                 </h4>
