film name changed

--- a/index.html
+++ b/index.html
@@ -750,8 +750,8 @@
                   </div>
                 </div>
                 <div class="rewards-one__list-right">
-                  <h4>Film Direction</h4>
-                  <p><span>/</span>In INDIA</p>
+                  <h4>Line Production</h4>
+                  <p><span>/</span>San Francisco</p>
                 </div>
               </li>
               <li>
@@ -769,7 +769,7 @@
                 </div>
                 <div class="rewards-one__list-right">
                   <h4>Line Production</h4>
-                  <p><span>/</span>In New York</p>
+                  <p><span>/</span>Los Angeles</p>
                 </div>
               </li>
             </ul>
