--- a/extra.html
+++ b/extra.html
@@ -213,7 +213,10 @@
           class="main-slider__carousel owl-carousel owl-theme thm-owl__carousel"
           data-owl-options='{"loop": false, "items": 1, "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"], "margin": 0, "dots": true, "dotsData": true, "nav": false, "animateOut": "slideOutDown", "animateIn": "fadeIn", "active": true, "smartSpeed": 1000, "autoplay": false, "autoplayTimeout": 7000, "autoplayHoverPause": false}'
         >
-          <div class="item main-slider__slide-1" data-dot="<button></button>">
+          <div
+            class="item main-slider__slide-1"
+            data-dot="<button>01. Line Production</button>"
+          >
             <div
               class="main-slider__bg"
               style="background-image: url(assets/img/slider-1.webp)"
@@ -239,15 +242,12 @@
             </div>
             <div class="container">
               <div class="main-slider__content">
-                <p class="main-slider__sub-title" style="font-size: 30px">
-                  Your partner for Line production and Promotion to
+                <p class="main-slider__sub-title">
+                  Your partner for Film Production across the Globe
                 </p>
                 <h2 class="main-slider__title">
-                  Optimize your budget, Schedule <br />
-                  &
-                  <br />
-                  Promote Your Creation
-                  <br />
+                  Optimize your budget <br />
+                  and schedule
                 </h2>
                 <div class="main-slider__btn-box">
                   <a
