main slider updated

--- a/index.html
+++ b/index.html
@@ -239,17 +239,17 @@
             </div>
             <div class="container">
               <div class="main-slider__content">
-                <p class="main-slider__sub-title" style="font-size: 30px">
-                  Your partner for Line production and Promotion to
-                </p>
-                <h2 class="main-slider__title">
+                <h2 class="main-slider__title">Film Production Studio</h2>
+                <p class="main-slider__sub-title">
+                  Your partner for Line production and Promotion to <br />
                   Optimize your budget, Schedule <br />
-                  &
-                  <br />
-                  Promote Your Creation
-                  <br />
-                </h2>
-                <div class="main-slider__btn-box">
+                  & Promote Your Creation
+                </p>
+                <!-- <h2 class="main-slider__title">
+                  Optimize your budget, Schedule <br />
+                  & Promote Your Creation
+                </h2> -->
+                <div class="main-slider__btn-box mt-4">
                   <a
                     href="services.html#line-production"
                     class="main-slider__btn thm-btn"
