--- a/index.html
+++ b/index.html
@@ -241,9 +241,10 @@
               <div class="main-slider__content">
                 <h2 class="main-slider__title">Film Production Studio</h2>
                 <p class="main-slider__sub-title">
-                  Your partner for Line production and Promotion to <br />
-                  Optimize your budget, Schedule <br />
-                  & Promote Your Creation
+                  Your partner for Line Production to <br />
+                  Optimize your budget & schedule <br />
+                  & <br />
+                  Promote your Creation
                 </p>
                 <!-- <h2 class="main-slider__title">
                   Optimize your budget, Schedule <br />
