--- a/index.html
+++ b/index.html
@@ -241,10 +241,35 @@
               <div class="main-slider__content">
                 <h2 class="main-slider__title">Film Production Studio</h2>
                 <p class="main-slider__sub-title">
-                  Your partner for Line Production to <br />
+                  Your partner for
+                  <span
+                    style="
+                      font-size: 36px;
+                      font-weight: 800;
+                      text-decoration: underline;
+                    "
+                    >Line Production</span
+                  >
+                  to <br />
                   Optimize your budget & schedule <br />
                   & <br />
-                  Promote your Creation
+                  <span
+                    style="
+                      font-size: 36px;
+                      font-weight: 800;
+                      text-decoration: underline;
+                    "
+                    >Promote</span
+                  >
+                  your
+                  <span
+                    style="
+                      font-size: 36px;
+                      font-weight: 800;
+                      text-decoration: underline;
+                    "
+                    >Creation</span
+                  >
                 </p>
                 <!-- <h2 class="main-slider__title">
                   Optimize your budget, Schedule <br />
