--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
           <div class="item main-slider__slide-1" data-dot="<button></button>">
             <div
               class="main-slider__bg"
-              style="background-image: url(assets/img/slider-1.webp)"
+              style="
+                background-image: url(assets/img/slider-1.webp);
+                opacity: 0.7;
+              "
             ></div>
             <!-- /.slider-one__bg -->
             <div class="main-slider__social-box">
@@ -252,12 +255,13 @@
                   >
                   to <br />
                   Optimize your budget & schedule <br />
-                  & <br />
+                  &
                   <span
                     style="
                       font-size: 36px;
                       font-weight: 800;
                       text-decoration: underline;
+                      padding-left: 10px;
                     "
                     >Promote</span
                   >
@@ -275,7 +279,7 @@
                   Optimize your budget, Schedule <br />
                   & Promote Your Creation
                 </h2> -->
-                <div class="main-slider__btn-box mt-4">
+                <div class="main-slider__btn-box mt-5">
                   <a
                     href="services.html#line-production"
                     class="main-slider__btn thm-btn"
