--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                       font-weight: 800;
                       text-decoration: underline;
                       padding-left: 10px;
+                      padding-right: 5px;
                     "
                     >Promote</span
                   >
@@ -271,6 +272,7 @@
                       font-size: 36px;
                       font-weight: 800;
                       text-decoration: underline;
+                      padding-left: 5px;
                     "
                     >Creation</span
                   >
