--- a/extra.html
+++ b/extra.html
@@ -72,6 +72,48 @@
     <!-- template styles -->
     <link rel="stylesheet" href="assets/css/eston.css" />
     <link rel="stylesheet" href="assets/css/eston-responsive.css" />
+    <style>
+      html,
+      body {
+        position: relative;
+        height: 100%;
+      }
+
+      body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+      }
+
+      .swiper {
+        width: 100%;
+        height: 100%;
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .swiper {
+        margin-left: auto;
+        margin-right: auto;
+      }
+    </style>
   </head>
 
   <body>
@@ -211,7 +253,7 @@
       <section class="main-slider">
         <div
           class="main-slider__carousel owl-carousel owl-theme thm-owl__carousel"
-          data-owl-options='{"loop": false, "items": 1, "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"], "margin": 0, "dots": true, "dotsData": true, "nav": false, "animateOut": "slideOutDown", "animateIn": "fadeIn", "active": true, "smartSpeed": 1000, "autoplay": false, "autoplayTimeout": 7000, "autoplayHoverPause": false}'
+          data-owl-options='{"loop": false, "items": 1, "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"], "margin": 0, "dots": true, "dotsData": true, "nav": false, "animateOut": "slideOutDown", "animateIn": "fadeIn", "active": true, "smartSpeed": 1000, "autoplay": false, "autoplayTimeout": 7000, "autoplayHoverPause": true}'
         >
           <div
             class="item main-slider__slide-1"
@@ -262,7 +304,7 @@
             </div>
           </div>
 
-          <!-- <div
+          <div
             class="item main-slider__slide-2"
             data-dot="<button>02. Film Promotion</button>"
           >
@@ -270,7 +312,7 @@
               class="main-slider__bg"
               style="background-image: url(assets/img/slider-2.webp)"
             ></div>
-         
+
             <div class="main-slider__social-box">
               <h4 class="main-slider__social-title">Follow Us</h4>
               <div class="main-slider__social">
@@ -309,11 +351,30 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </section>
       <!--Main Sllider Start -->
-
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="assets/img/slider-1.webp" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/img/slider-2.webp" alt="" />
+          </div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">Slide 6</div>
+          <div class="swiper-slide">Slide 7</div>
+          <div class="swiper-slide">Slide 8</div>
+          <div class="swiper-slide">Slide 9</div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
       <!--About One Start-->
       <section class="about-one">
         <div class="about-one__shape-2">
