--- a/index.html
+++ b/index.html
@@ -211,18 +211,23 @@
       <section class="main-slider">
         <div
           class="main-slider__carousel owl-carousel owl-theme thm-owl__carousel"
-          data-owl-options='{"loop": false, "items": 1, "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"], "margin": 0, "dots": true, "dotsData": true, "nav": false, "animateOut": "slideOutDown", "animateIn": "fadeIn", "active": true, "smartSpeed": 1000, "autoplay": false, "autoplayTimeout": 7000, "autoplayHoverPause": false}'
+          data-owl-options='{"loop": true, "items": 1,
+           "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"], "margin": 0, "dots": false, "dotsData": true, "nav": true, "animateOut": "slideOutDown", "animateIn": "fadeIn", "active": true, "smartSpeed": 1000, "autoplay": true, "autoplayTimeout": 7000, "autoplayHoverPause": false}'
         >
-          <div class="item main-slider__slide-1" data-dot="<button></button>">
+          <div
+            class="item main-slider__slide-1"
+            data-dot="<button>01. Line Production</button>"
+          >
             <div
               class="main-slider__bg"
               style="
                 background-image: url(assets/img/slider-1.webp);
                 opacity: 0.7;
+                overflow: hidden;
               "
             ></div>
             <!-- /.slider-one__bg -->
-            <div class="main-slider__social-box">
+            <div class="main-slider__social-box mb-5">
               <h4 class="main-slider__social-title">Follow Us</h4>
               <div class="main-slider__social">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -245,43 +250,16 @@
                 <h2 class="main-slider__title">Film Production Studio</h2>
                 <p class="main-slider__sub-title">
                   Your partner for
-                  <span
-                    style="
-                      font-size: 36px;
-                      font-weight: 800;
-                      text-decoration: underline;
-                    "
-                    >Line Production</span
-                  >
-                  to <br />
-                  Optimize your budget & schedule <br />
-                  &
-                  <span
-                    style="
-                      font-size: 36px;
-                      font-weight: 800;
-                      text-decoration: underline;
-                      padding-left: 10px;
-                      padding-right: 5px;
-                    "
-                    >Promote</span
-                  >
-                  your
-                  <span
-                    style="
-                      font-size: 36px;
-                      font-weight: 800;
-                      text-decoration: underline;
-                      padding-left: 5px;
-                    "
-                    >Creation</span
-                  >
+                  <span style="font-weight: 800"> Line Production</span> across
+                  the Globe <br />
+                  to
                 </p>
-                <!-- <h2 class="main-slider__title">
-                  Optimize your budget, Schedule <br />
-                  & Promote Your Creation
-                </h2> -->
-                <div class="main-slider__btn-box mt-4">
+
+                <h2 class="main-slider__title" style="font-size: 50px">
+                  Optimize your budget <br />
+                  and schedule
+                </h2>
+                <div class="main-slider__btn-box">
                   <a
                     href="services.html#line-production"
                     class="main-slider__btn thm-btn"
@@ -294,15 +272,18 @@
             </div>
           </div>
 
-          <!-- <div
+          <div
             class="item main-slider__slide-2"
             data-dot="<button>02. Film Promotion</button>"
           >
             <div
               class="main-slider__bg"
-              style="background-image: url(assets/img/slider-2.webp)"
+              style="
+                background-image: url(assets/img/slider-2.webp);
+                opacity: 0.7;
+              "
             ></div>
-         
+
             <div class="main-slider__social-box">
               <h4 class="main-slider__social-title">Follow Us</h4>
               <div class="main-slider__social">
@@ -324,10 +305,12 @@
             <div class="container">
               <div class="main-slider__content">
                 <p class="main-slider__sub-title">
-                  Your partner for Film Production across the Globe
+                  Your partner for
+                  <span style="font-weight: 800">Film Promotion</span> across
+                  the globe <br />to
                 </p>
-                <h2 class="main-slider__title">
-                  Promotion of your <br />
+                <h2 class="main-slider__title" style="font-size: 50px">
+                  Promote and Market your <br />
                   Creation
                 </h2>
                 <div class="main-slider__btn-box">
@@ -341,7 +324,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </section>
       <!--Main Sllider Start -->
@@ -1394,5 +1377,24 @@
 
     <!-- template js -->
     <script src="assets/js/eston.js"></script>
+    <script>
+      function equalizeSlideHeights() {
+        let maxHeight = 0;
+        document
+          .querySelectorAll(".main-slider__carousel .item")
+          .forEach((slide) => {
+            slide.style.height = "300"; // Reset height
+            maxHeight = Math.max(maxHeight, slide.offsetHeight);
+          });
+        document
+          .querySelectorAll(".main-slider__carousel .item")
+          .forEach((slide) => {
+            slide.style.height = maxHeight + "px";
+          });
+      }
+
+      window.addEventListener("load", equalizeSlideHeights);
+      window.addEventListener("resize", equalizeSlideHeights);
+    </script>
   </body>
 </html>
