assumming final update

--- a/index.html
+++ b/index.html
@@ -250,8 +250,10 @@
                 <h2 class="main-slider__title">Film Production Studio</h2>
                 <p class="main-slider__sub-title">
                   Your partner for
-                  <span style="font-weight: 800"> Line Production</span> across
-                  the Globe <br />
+                  <span style="font-weight: 900; font-style: normal">
+                    Line Production</span
+                  >
+                  across the Globe <br />
                   to
                 </p>
 
@@ -302,12 +304,16 @@
             <div class="main-slider__shape-3 img-bounce">
               <img src="assets/images/shapes/main-slider-shape-3.png" alt="" />
             </div>
-            <div class="container">
+            <div class="container" style="margin-top: 20px">
               <div class="main-slider__content">
+                <h2 class="main-slider__title">Film Production Studio</h2>
+
                 <p class="main-slider__sub-title">
                   Your partner for
-                  <span style="font-weight: 800">Film Promotion</span> across
-                  the globe <br />to
+                  <span style="font-weight: 900; font-style: normal"
+                    >Film Promotion</span
+                  >
+                  across the globe <br />to
                 </p>
                 <h2 class="main-slider__title" style="font-size: 50px">
                   Promote and Market your <br />
@@ -1377,7 +1383,7 @@
 
     <!-- template js -->
     <script src="assets/js/eston.js"></script>
-    <script>
+    <!-- <script>
       function equalizeSlideHeights() {
         let maxHeight = 0;
         document
@@ -1395,6 +1401,6 @@
 
       window.addEventListener("load", equalizeSlideHeights);
       window.addEventListener("resize", equalizeSlideHeights);
-    </script>
+    </script> -->
   </body>
 </html>
