--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
             <div class="container">
               <div class="main-slider__content">
-                <h2 class="main-slider__title">Film Production Studio</h2>
+                <h2 class="main-slider__title">Film Marketing Agency</h2>
                 <p class="main-slider__sub-title">
                   Your partner for
                   <span style="font-weight: 900; font-style: normal">
